--- a/style.css
+++ b/style.css
@@ -36,7 +36,19 @@ line-height: 20px;
   float: right;
 }
 
+.active{
+  color: black;
+}
+
+.icon{
+  display: none;
+}
+
 .header > a:hover{
+  color: black;
+}
+
+.header .menu > a:hover{
   color: black;
 }
 
@@ -135,14 +147,42 @@ button{
 }
 
 @media screen and (max-width:757px){
-  .menu{
-    float: none;
-  }
+  
   .menu a{
-    border: 0.5px solid black;
-  }
-  .header a{
+    display: none;
+    }  
+  .responsive a.icon {
+    float: right;
     display: block;
+    font-size: 20px;
+  }
+  
+   .menu.responsive{
+     float: none;
+     padding: 30px 0px 0px 1px;
+     }
+
+  .responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 8px;
+  }
+  .menu.responsive a { 
     float: none;
+    display: block;
+    text-align: left;
+    font-size: 15px;
+    line-height: 8px;
+  }
+
+  .header .logo{
+    display: block;
+    float: left;
+  }
+
+  .header a{
+    font-size: 17px;
+    padding: 13px;
+    line-height: 12px;
   }
 }
